# geminicli-desktop-advanced

./: .gitignore  Cargo.toml  FEATURES_IMPLEMENTED.md  IMPLEMENTATION_SUMMARY.md  MODULAR_UI_IMPLEMENTATION.md  README.md  STUBS_PLACEHOLDERS_ESTIMATES_BY_AI.md  TESTING_PLAN.md  eslint.config.js  footer.ts  gemini-desktop-root-v0.1.0.tgz  gh-pages.md  index.html  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  vite.config.ts
.config/: nextest.toml
.github/workflows/: ci.yml  docs.yml  release.yml  review.yml
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  lib_extension.rs  mcp_registry.rs  models.rs  test_utils.rs  themes.rs
crates/backend/src/cli/: mod.rs
crates/backend/src/events/: mod.rs
crates/backend/src/filesystem/: mod.rs
crates/backend/src/projects/: mod.rs
crates/backend/src/rpc/: mod.rs
crates/backend/src/search/: mod.rs
crates/backend/src/security/: mod.rs
crates/backend/src/servers/: mod.rs
crates/backend/src/session/: mod.rs
crates/backend/src/types/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/src/: event_emitter.rs  hotkeys.rs  lib.rs  settings.rs  state.rs  tray.rs
crates/tauri-app/src/commands/: mod.rs
docs/: README.md  _config.yml  index.html
docs/assets/: style.css
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppHeader.tsx  AppSidebar.tsx  CliWarnings.tsx  CodeBlock.tsx  ConversationList.tsx  DiffViewer.tsx  DirectorySelectionDialog.tsx  GeminiIcon.tsx  GeminiLogo.tsx  GeminiText.tsx  MarkdownRenderer.tsx  MessageActions.tsx  MessageBubble.tsx  MessageContent.tsx  MessageHeader.tsx  MessageInputBar.tsx  ModelContextProtocol.tsx  PageLayout.tsx  RecentChats.tsx  SearchInput.tsx  SearchResults.tsx  ThinkingBlock.tsx  ToolCallDisplay.tsx  ToolCallsList.tsx  ToolResultRenderer.tsx  simple-theme-toggle.tsx
frontend/src/components/branding/: GeminiAvatar.tsx  GeminiLogo.tsx  GeminiLogoFixed.tsx  GeminiText.tsx  PiebaldLogoFixed.tsx
frontend/src/components/chat/: FileUpload.tsx  PersistentChat.tsx  SettingsDialog.tsx
frontend/src/components/common/: CliWarnings.tsx  CodeBlock.tsx  DiffViewer.tsx  DirectorySelectionDialog.tsx  MarkdownRenderer.tsx  MentionInput.tsx  SearchInput.tsx  SearchResults.tsx  ToolCallDisplay.tsx  ToolResultRenderer.tsx
frontend/src/components/conversation/: ConversationList.tsx  MessageContent.tsx  MessageHeader.tsx  MessageInputBar.tsx  RecentChats.tsx
frontend/src/components/demo/: ModularUIDemo.tsx
frontend/src/components/layout/: AppFooter.tsx  AppHeader.tsx  AppSidebar.tsx  CustomizableLayout.tsx  DragDropProvider.tsx  DropZone.tsx  FloatingPanelManager.tsx  LayoutCustomizer.tsx  PageLayout.tsx  PanelContainer.tsx  PanelManager.tsx  QuickPanelToggle.tsx  StatsWidget.tsx
frontend/src/components/marketplace/: AWSToolkitIntegration.tsx  ExtensionManager.tsx  MarketplaceView.tsx
frontend/src/components/navigation/: NavigationMenu.tsx
frontend/src/components/panels/: ExtensionPanel.tsx  FileExplorer.tsx  Output.tsx  Terminal.tsx
frontend/src/components/project/: ProjectLearning.tsx
frontend/src/components/renderers/: CommandRenderer.tsx  (+8 more)
frontend/src/contexts/: ConversationContext.tsx  ThemeContext.ts
frontend/src/hooks/: useCliInstallation.ts  useConversationEvents.ts  useConversationManager.ts  useLayoutConfig.ts  useMarketplace.ts  useMessageHandler.ts  useProcessManager.ts  useScreenshot.ts  useTheme.ts  useToolCallConfirmation.ts
frontend/src/lib/: api.ts  webApi.ts
frontend/src/pages/: AwsToolkit.tsx  Chat.tsx  CommandBuilder.tsx  Extensions.tsx  FileBrowser.tsx  HomeDashboard.tsx  LayoutCustomizer.tsx  Marketplace.tsx  McpBrowser.tsx  ModelManager.tsx  ModularUIDemo.tsx  ProjectBuilder.tsx  ProjectDetail.tsx  Projects.tsx  Servers.tsx  Settings.tsx  SystemMonitor.tsx  TaskManager.tsx  ThemeBuilder.tsx
frontend/src/styles/: themes.css
frontend/src/types/: index.ts  layout.ts  marketplace.ts  process.ts  system.ts
frontend/src/utils/: helpers.ts  toolCallParser.ts  toolInputParser.ts
scripts/: build-docs.js  ghpages.js  request.json  version.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CodeBlock.tsx  ConversationList.tsx  GeminiAvatar.tsx  GeminiLogo.tsx  GeminiLogoCenter.tsx  MarkdownRenderer.tsx  MentionInput.tsx  MessageContent.tsx  PiebaldLogo.tsx  SplitrailLogo.tsx  ThinkingBlock.tsx  ToolCallDisplay.tsx  UserAvatar.tsx  simple-theme-toggle.tsx  theme-provider.tsx
src/components/ui/: code.tsx  context-menu.tsx  dialog.tsx
src/utils/: toolCallParser.ts
(+16 files in other folders)
