[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[features]
default = []
proptest = ["dep:proptest"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
proptest = { version = "1.0", optional = true }
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockall = "0.13"
serial_test = "3.0"
cargo-tarpaulin = "0.31"
criterion = "0.5"
once_cell = "1.19"
